test/testdata/infer/t_interface.rb.exp
test/testdata/infer/t_interface.rb:44: Revealed type: `MyInterface` https://srb.help/7014
    44 |T.reveal_type(instance) # error: `MyInterface`
        ^^^^^^^^^^^^^^^^^^^^^^^
  Got `MyInterface` originating from:
    test/testdata/infer/t_interface.rb:43:
    43 |instance = get_instance(type: MyInterface)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

test/testdata/infer/t_interface.rb:53: Revealed type: `MyInterface` https://srb.help/7014
    53 |T.reveal_type(result) # error: `MyInterface`
        ^^^^^^^^^^^^^^^^^^^^^
  Got `MyInterface` originating from:
    test/testdata/infer/t_interface.rb:52:
    52 |result = create_from_interface(interface_type: MyInterface)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

test/testdata/infer/t_interface.rb:58: Revealed type: `MyInterface` https://srb.help/7014
    58 |T.reveal_type(instance1) # error: `MyInterface`
        ^^^^^^^^^^^^^^^^^^^^^^^^
  Got `MyInterface` originating from:
    test/testdata/infer/t_interface.rb:56:
    56 |instance1 = get_instance(type: MyInterface)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

test/testdata/infer/t_interface.rb:59: Revealed type: `AnotherInterface` https://srb.help/7014
    59 |T.reveal_type(instance2) # error: `AnotherInterface`
        ^^^^^^^^^^^^^^^^^^^^^^^^
  Got `AnotherInterface` originating from:
    test/testdata/infer/t_interface.rb:57:
    57 |instance2 = get_instance(type: AnotherInterface)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

test/testdata/infer/t_interface.rb:62: Expected `T::Interface[T.type_parameter(:T)]` but found `T.class_of(MyClass)` for argument `type` https://srb.help/7002
    62 |get_instance(type: MyClass)
                           ^^^^^^^
  Expected `T::Interface[T.type_parameter(:T)]` for argument `type` of method `Object#get_instance`:
    test/testdata/infer/t_interface.rb:35:
    35 |    .params(type: T::Interface[T.type_parameter(:T)])
                    ^^^^
  Got `T.class_of(MyClass)` originating from:
    test/testdata/infer/t_interface.rb:62:
    62 |get_instance(type: MyClass)
                           ^^^^^^^
  Detailed explanation:
    `T.class_of(MyClass)` does not derive from `T::Interface`

test/testdata/infer/t_interface.rb:69: This code is unreachable https://srb.help/7006
    69 |takes_string_interface(String)
                               ^^^^^^
    test/testdata/infer/t_interface.rb:62: This expression always raises or can never be computed
    62 |get_instance(type: MyClass)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
